--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+server.port=8989
 spring.datasource.url=jdbc:mysql://localhost:3306/db_contas?useTimezone=true&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=123456
